# Weed-Terminator-Demonstrator

./: README.md
GUI/: AutoWindow.py  Doc.md  Documentation.md  GUI.py  README.md  autonomous_mode_window.py  camera_view.py  fortesting].py  main_window.py  manualWindow.py  manual_mode_window.py  test.py  video_player.py
KP03_Code/Cartesian_positioner/: README.docx
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/: .gitignore  README.md  odriveXA.json  odriveYZ.json
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/: CMakeLists.txt  package.xml
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/config/: controllers.yaml  touch_parameters.yaml
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/include/cartesian_positioner_controller/: homing.hpp  positioner_controller.hpp
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/launch/: all_control.launch.py  demo_mode_dynamic.launch.py  demo_mode_measured.launch.py  demo_mode_static.launch.py  launch_utils.py  manual_control.launch.py  rviz.launch.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/scripts/: dynamic_demo.bash  homing.bash  homing_python.py  log_errors.bash  log_errors.py  set_all_idle.bash  set_all_idle.py  start_controllers.bash  start_measurement.bash  static_demo.bash  utils.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_controller/src/: joystick_servo.cpp  plant_tracking.cpp  positioner_controller.cpp
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_description/: CMakeLists.txt  package.xml
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/cartesian_positioner_moveit_config/: CMakeLists.txt  package.xml
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/conveyor_interface/: package.xml  setup.cfg  setup.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_interfaces/: CMakeLists.txt  package.xml  setup.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_protocol/: package.xml  setup.cfg  setup.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_protocol/detection_protocol/: filtering_detections.py  measure_positions.py  pixelfarming_translator.py  publisher_detections.py  publisher_speed.py  publisher_static_once.py  time_stamp.py  weeding_sequence.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_protocol/detection_protocol/config/: dynamic_positions.yaml  measured_positions.yaml  static_positions.yaml
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_protocol/launch/: detection_protocol.launch.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/detection_tf2/: package.xml  rviz_detection_tf.rviz  setup.cfg  setup.py
KP03_Code/Cartesian_positioner/Cartesian_positioner/mechatronica-cartesian_positioner-5f05afad93c4/src/positioner_tf2_frame_publisher/: CMakeLists.txt  package.xml
KP03_Code/Odrive_ros2_control/: README.docx
KP03_Code/Odrive_ros2_control/mechatronica-odrive_ros2_control-455bab53f335/: README.md
KP03_Code/Odrive_ros2_control/mechatronica-odrive_ros2_control-455bab53f335/odrive_hardware_interface/src/: odrive_hardware_interface.cpp  odrive_usb.cpp
KP03_Code/amt212b_encoder_arduino/: README.docx
KP03_Code/amt212b_encoder_arduino/mechatronica-amt212b_arduino-d1f8f58313b4/mechatronica-amt212b_arduino-d1f8f58313b4/: AMT212B.h  RS485.h  USB.h  settings.h
KP03_Code/amt212b_encoder_arduino/mechatronica-amt212b_arduino-d1f8f58313b4/mechatronica-amt212b_arduino-d1f8f58313b4/amt212b_arduino/: amt212b_arduino.ino
(+49 files in other folders)
